syntax = "proto3";

package common;

message Request{
    string FileSuffix = 1;
    string ChannelId = 2;
    repeated string RequestList = 3;
}

message FileBlock {
    string FileBlockId = 1;
    bytes Content = 2;
}

message FileBlockPackage{
    repeated FileBlock FileBlock = 1;
}

service LedgerTransfer{
    rpc LedgerTrans(Request) returns(stream FileBlockPackage);
}